# pqthread-commms

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: main.yaml  publish-to-pypi.yaml  push.yaml  release.yaml  test-and-lint.yaml
doc/: design.drawio
example/: gui.py  gui_worker.py  test.py  window.py  worker.py
examples/: example.py  gui_worker.py
pqthread_comms/: agents.py  containers.py  controllers.py  descriptors.py  qt.py  utils.py
pqthread_comms/examples/: gui_worker.py
pqthreads/: __init__.py  agents.py  config.py  containers.py  controllers.py  decorator.py  descriptors.py  refs.py  utils.py
pqthreads/examples/: window.py  worker.py
test/: basic_test.py
tests/: basic_test.py
